playing with layout to make inner links align correctly and improve overall user experience

--- a/statz/pyramid/static/css/dashboard.css
+++ b/statz/pyramid/static/css/dashboard.css
@@ -36,7 +36,6 @@ a:hover {
     position: absolute;
     top: 10px;
     left: 10px;
-    content: url(../img/pyramid.png);
 }
 .navbar-brand {
     padding-left: 50px;
